@@ -24,6 +24,8 @@ extern gboolean commie_mode;
 static void
 logout (GtkWidget *widget)
 {
+	g_signal_handlers_block_by_func (G_OBJECT (widget), logout, NULL);
+
 	if (global_config.drawer_auto_close) {
 		GtkWidget *parent = PANEL_WIDGET(widget->parent)->panel_parent;
 		g_return_if_fail(parent!=NULL);
@@ -38,6 +40,8 @@ logout (GtkWidget *widget)
 	}
 
 	panel_quit();
+
+	g_signal_handlers_unblock_by_func (G_OBJECT (widget), logout, NULL);
 }
 
 static void  
