@@ -37,7 +37,6 @@ void xstuff_go_through_client_list	(void);
 
 void xstuff_set_no_group_and_no_input	(GdkWindow *win);
 
-gboolean xstuff_nautilus_desktop_present (void);
 void xstuff_setup_desktop_area		(int screen,
 					 int left,
 					 int right,
